--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 django
+django-jazzmin
+django-filter
+django-jsonfield
+django-nested-admin
 djangorestframework
+djangorestframework-simplejwt
+drf-yasg
